--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body{
 
 		<div class="col-md-3">
 		<div class="product-top">
-		<img src="file:///C:/Users/Admin/Desktop/shop/product10.jpg.jpg" width="100%" height="50%">
+		<img src="product10.jpg.jpg" width="100%" height="50%">
 			<div class="overlay">
 			<button type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-eye"></i></button>
 			<button type="button" class="btn btn-secondary"title="Add to Whishlist"><i class="fa fa-heart-o"></i></button>
@@ -122,7 +122,7 @@ body{
 
 		<div class="col-md-3">
 		<div class="product-top">
-		<img src="file:///C:/Users/Admin/Desktop/shop/product3.jpg.jpg" width="100%" height="50%">
+		<img src="product3.jpg.jpg" width="100%" height="50%">
 			<div class="overlay">
 			<button type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-eye"></i></button>
 			<button type="button" class="btn btn-secondary"title="Add to Whishlist"><i class="fa fa-heart-o"></i></button>
@@ -143,7 +143,7 @@ body{
 
 	    <div class="col-md-3">
 		<div class="product-top">
-		<img src="file:///C:/Users/Admin/Desktop/shop/product6.jpg.jpg" width="100%" height="50%">
+		<img src="product6.jpg.jpg" width="100%" height="50%">
 			<div class="overlay">
 			<button type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-eye"></i></button>
 			<button type="button" class="btn btn-secondary"title="Add to Whishlist"><i class="fa fa-heart-o"></i></button>
@@ -164,7 +164,7 @@ body{
 
 	    <div class="col-md-3">
 		<div class="product-top">
-		<img src="file:///C:/Users/Admin/Desktop/shop/product5.jpg.jpg" width="100%" height="50%">
+		<img src="product5.jpg.jpg" width="100%" height="50%">
 			<div class="overlay">
 			<button type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-eye"></i></button>
 			<button type="button" class="btn btn-secondary"title="Add to Whishlist"><i class="fa fa-heart-o"></i></button>
@@ -184,7 +184,7 @@ body{
 	    </div><br>
 	     <div class="col-md-3">
 		<div class="product-top">
-		<img src="file:///C:/Users/Admin/Desktop/shop/product1.jpg" width="100%" height="50%">
+		<img src="product1.jpg" width="100%" height="50%">
 			<div class="overlay">
 			<button type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-eye"></i></button>
 			<button type="button" class="btn btn-secondary"title="Add to Whishlist"><i class="fa fa-heart-o"></i></button>
@@ -204,7 +204,7 @@ body{
 
 	    <div class="col-md-3">
 		<div class="product-top">
-		<img src="file:///C:/Users/Admin/Desktop/shop/product8.jpg.jpg" width="100%" height="50%">
+		<img src="product8.jpg.jpg" width="100%" height="50%">
 			<div class="overlay">
 			<button type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-eye"></i></button>
 			<button type="button" class="btn btn-secondary"title="Add to Whishlist"><i class="fa fa-heart-o"></i></button>
@@ -224,7 +224,7 @@ body{
 	    </div><br>
 	     <div class="col-md-3">
 		<div class="product-top">
-		<img src="file:///C:/Users/Admin/Desktop/shop/product2.jpg" width="100%" height="50%">
+		<img src="product2.jpg" width="100%" height="50%">
 			<div class="overlay">
 			<button type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-eye"></i></button>
 			<button type="button" class="btn btn-secondary"title="Add to Whishlist"><i class="fa fa-heart-o"></i></button>
@@ -243,7 +243,7 @@ body{
 	    </div><br>
 	     <div class="col-md-3">
 		<div class="product-top">
-		<img src="file:///C:/Users/Admin/Desktop/shop/product12.jpg" width="100%" height="50%">
+		<img src="product12.jpg" width="100%" height="50%">
 			<div class="overlay">
 			<button type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-eye"></i></button>
 			<button type="button" class="btn btn-secondary"title="Add to Whishlist"><i class="fa fa-heart-o"></i></button>
@@ -262,7 +262,7 @@ body{
 	    </div>
 	     <div class="col-md-3">
 		<div class="product-top">
-		<img src="file:///C:/Users/Admin/Desktop/shop/product11.jpg" width="450%" height="100%">
+		<img src="product11.jpg" width="450%" height="100%">
 			<div class="overlay">
 			<button type="button" class="btn btn-secondary" title="Quick Shop"><i class="fa fa-eye"></i></button>
 			<button type="button" class="btn btn-secondary"title="Add to Whishlist"><i class="fa fa-heart-o"></i></button>
